fix: dialog layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+html {
+  scrollbar-gutter: stable;
+}
+
+body[style] {
+  margin: 0 auto !important;
+}
